refactor(ui): bind replacement workspace lifetime (#28)